utils/vert/vert-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vert
  namespace: utils
  labels:
    app: vert
spec:
  selector:
    app: vert
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
